# kslink

./: .dockerignore  .env  .gitignore  Caddyfile  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yml  kslink.toml  rust-toolchain.toml
crates/entity/: Cargo.toml
crates/entity/src/: error.rs  lib.rs
crates/entity/src/helper/: mod.rs  url_mapping.rs  visitor.rs
crates/entity/src/model/: mod.rs  prelude.rs  url_mapping.rs  visit_record.rs  visitor.rs
crates/kslink-backend/: Cargo.toml
crates/kslink-backend/src/: error.rs  main.rs
crates/kslink-backend/src/cache/: mod.rs  moka.rs  redis.rs
crates/kslink-backend/src/common/: fairing.rs  guard.rs  hasher.rs  mod.rs  request.rs  response.rs
crates/kslink-backend/src/endpoints/: link.rs  mod.rs  root.rs  statistics.rs
crates/kslink-backend/src/middleware/: handler.rs
crates/kslink-config/: Cargo.toml
crates/kslink-config/src/: lib.rs
crates/kslink-frontend/: Cargo.toml  Dioxus.toml  README.md  build.rs  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.css
crates/kslink-frontend/assets/: tailwind.css
crates/kslink-frontend/src/: common.rs  component.rs  error.rs  lib.rs  main.rs  request.rs  view.rs
crates/kslink-rules/: Cargo.toml
crates/kslink-rules/src/: cli.rs  error.rs  lib.rs  main.rs  meta.rs  store.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_mapping_table.rs  m20220101_000001_create_table.rs  m20250806_081507_create_visitor_table.rs  m20250806_081507_visitor.rs  m20250809_130823_create_trimmed.rs  main.rs
rules/: bilibili.toml  twitter.toml
scripts/: gen_entities.sh
