[workspace]
members = [
    "crates/entity",
    "crates/kslink-backend",
    "crates/kslink-config",
    "crates/migration",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
async-trait = "*"
educe = "0.6"
log = "0.4"
mimalloc = "0.1.47"
radix_fmt_ng = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "2.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.5", features = ["serde"] }

entity = { path = "crates/entity" }
kslink-config = { path = "crates/kslink-config" }
kslink-backend = { path = "crates/kslink-backend" }
migration = { path = "crates/migration" }

[workspace.dependencies.figment]
features = ["toml", "env", "json"]
version = "*"

[workspace.dependencies.sea-orm-migration]
version = "1.1"
features = ["runtime-tokio-rustls", "sqlx-postgres"]

[workspace.dependencies.sea-orm]
version = "1.1"
features = ["runtime-tokio-rustls", "sqlx-postgres", "with-time", "with-json"]

[workspace.dependencies.rocket]
version = "0.5.1"
features = ["json", "uuid"]

[patch.crates-io]
figment = { git = "https://github.com/Krysztal112233/Figment.git" }
