[workspace]
members = [
    "crates/entity",
    "crates/kslink-backend",
    "crates/kslink-config",
    "crates/kslink-frontend",
    "crates/migration",
]
resolver = "3"

[workspace.package]
authors = ["Krysztal Huang <krysztal.huang@outlook.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "*"
daisy_rsx = "0.1"
deadpool = "*"
dioxus = { version = "0.6", features = ["router"] }
educe = "0.6"
log = "0.4"
mimalloc = "0.1.47"
moka = { version = "0.12", features = ["future"] }
once_cell = "1.21"
radix_fmt_ng = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "2.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.5", features = ["serde"] }

entity = { path = "crates/entity" }
kslink-config = { path = "crates/kslink-config" }
kslink-backend = { path = "crates/kslink-backend" }
migration = { path = "crates/migration" }

[workspace.dependencies.figment]
features = ["toml", "env", "json"]
version = "*"

[workspace.dependencies.sea-orm-migration]
version = "1.1"
features = ["runtime-tokio-rustls", "sqlx-postgres"]

[workspace.dependencies.sea-orm]
version = "1.1"
features = ["runtime-tokio-rustls", "sqlx-postgres", "with-time", "with-json"]

[workspace.dependencies.rocket]
version = "0.5.1"
features = ["json", "uuid"]

[workspace.dependencies.deadpool-redis]
version = "0.22"
features = ["tokio-rustls-comp", "tls-rustls", "serde"]

[patch.crates-io]
figment = { git = "https://github.com/Krysztal112233/Figment.git" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
