[package]
name = "entity"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
deadpool-redis.workspace = true
deadpool.workspace = true
rocket.workspace = true
sea-orm.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

kslink-config.workspace = true
