[package]
name = "kslink-backend"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
deadpool-redis.workspace = true
deadpool.workspace = true
educe.workspace = true
log.workspace = true
mimalloc.workspace = true
moka.workspace = true
once_cell.workspace = true
radix_fmt_ng.workspace = true
rocket.workspace = true
rocket_cors.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

entity.workspace = true
kslink-config.workspace = true
migration.workspace = true
