[package]
name = "kslink-frontend"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
dioxus-logger.workspace = true
dioxus.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[build-dependencies]
chrono.workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]
