[package]
name = "migration"
version.workspace = true
edition.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true

kslink-config.workspace = true

[dependencies.sea-orm-migration]
version = "1.1.0"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
